--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "plump",
-	"version": "0.0.3",
+	"name": "@sveltering/plump",
+	"version": "0.0.4",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "svelte-kit sync && svelte-package",
